--- a/en/index.html
+++ b/en/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight:5  00;">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light" style="font-weight:5  00;">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Annecy</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
