--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Annecy Αλεξανδρούπολη</title>
-  <meta name="description" content="Απολαύστε μια πολυτελή διαμονή στην καρδιά της Αλεξανδρούπολης στο διαμέρισμα Annecy. Το πολυτελές διαμέρισμα προσφέρει μια εκπληκτική θέα στον Μητροπολιτικό Ναό του Αγίου Νικολάου και υψηλής ποιότητας υπηρεσίες για μια άνετη και ιδιωτική διαμονή. Κάντε κράτηση τώρα!">
+  <meta name="description" content="Απολαύστε μια πολυτελή διαμονή στην καρδιά της Αλεξανδρούπολης στο διαμέρισμα Annecy. Κάντε κράτηση τώρα!">
   <meta name="keywords" content="Annecy Alexandroupoli, Annecy Αλεξανδρούπολη, πολυτελές διαμερίσμα, ιδιωτική διαμονή, κεντρική τοποθεσία, κοντίνες τοποθεσίες, πλήρως εξοπλισμένο, δωρέαν wi-fi, κλιματισμός, θέρμανση, Μητροπολιτικός Ναός του Αγίου Νικολάου, Φάρος Αλεξανδρούπολης, Εκκλησιαστικό Μουσείο Αλεξανδρούπολης.">
   <meta name="author" content="Annecy">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -249,7 +249,7 @@
                   <img src="images/gr-flag.png" alt="USA Flag" class="me-3" width="50" height="30">
                   <div class="testimonial-frame d-flex align-items-center justify-content-center mb-4">
                     
-                    <p class="lead mb-0">"Το διαμέριασμα ήταν πολύ ωραίος χώρος, κατάλληλο για οικογενεια , πεντακάθαρο, άνετο, ήσυχο, σε πολύ καλή τοποθεσία στο κέντρο, και βρηκαμε εύκολα να παρκάρουμε . Ο οικοδεσπότης παρόλο που φτάσαμε αργά το βράδυ μας εξυπηρέτησε με ευγένεια και υπομονή. Πραγματικά έχω να πω , καθως ταξιδευουμε πολυ , ηταν από τα πιο ωραία διαμερίσματα που έχω μείνει ."</p>
+                    <p class="lead mb-0">"Το διαμέρισμα ήταν πολύ ωραίος χώρος, κατάλληλο για οικογενεια , πεντακάθαρο, άνετο, ήσυχο, σε πολύ καλή τοποθεσία στο κέντρο, και βρηκαμε εύκολα να παρκάρουμε . Ο οικοδεσπότης παρόλο που φτάσαμε αργά το βράδυ μας εξυπηρέτησε με ευγένεια και υπομονή. Πραγματικά έχω να πω , καθως ταξιδευουμε πολυ , ηταν από τα πιο ωραία διαμερίσματα που έχω μείνει ."</p>
                   </div>
                   <p class="font-weight-bold">Φανή </p>
                   
