--- a/en/index.html
+++ b/en/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Annecy Alexandroupoli</title>
-  <meta name="description" content="Enjoy a luxurious stay in the heart of Alexandroupoli at the Annecy Apartment. Our elegant and minimalist two-bedroom apartment offers a stunning view of the Metropolitan Cathedral of St. Nicholas and quality services for a comfortable and private stay. Book now to experience our fully equipped apartment with free Wi-Fi, air conditioning, speakers, and more. Nearby attractions include the Lighthouse of Alexandroupolis, the Church of Saint Nicholas, and the Ecclesiastical Museum of Alexandroupolis. Contact us to arrange for cleaning services and a baby crib.">
+  <meta name="description" content="Enjoy a luxurious stay in the heart of Alexandroupoli at the Annecy Apartment. Book now!">
   <meta name="keywords" content="Annecy Alexandroupoli, luxurious apartment, private stay, central location, nearby attractions, fully equipped, free Wi-Fi, air conditioning, speakers, cleaning services, baby crib, Metropolitan Cathedral of St. Nicholas, Lighthouse of Alexandroupolis, Church of Saint Nicholas, Ecclesiastical Museum of Alexandroupolis">
   <meta name="author" content="Annecy">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
