--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       padding-left:10%;
       padding-right:10%;
     }
+    h1 {
+      font-size: 24px;
+    }
   </style>
 </head>
 
@@ -91,7 +94,7 @@
             </div>
             </div>
             <div class="col-lg-5">
-              <h5>ANNECY</h5>
+              <h1>ANNECY</h1>
             <div class="heading">
                 <br>
                 <p> Το Annecy είναι ένα πολυτελές και εκλεπτυσμένο οροφοδιαμέρισμα με μαγευτική θέα στον Μητροπολιτικό Ναό του Αγ.Νικολάου που θεμελιώθηκε το 1892. Η κομψή και η μινιμαλιστική του διακόσμηση, σε συνδυασμό με την ποιότητα των παρεχόμενων υπηρεσιών του, χαρίζουν ένα ασυναγώνιστο αίσθημα άνεσης και ιδιωτικότητας. Βρίσκεται στην καρδιά της πόλης, μόλις 2 βήματα ακριβώς από την κεντρική αγορά και από χώρους εστίασης και νυχτερινής ζωής.<br><br> </p>
