--- a/en/index.html
+++ b/en/index.html
@@ -20,6 +20,9 @@
       padding-left:10%;
       padding-right:10%;
     }
+    h1 {
+      font-size: 24px;
+    }
   </style>
 </head>
 
@@ -91,7 +94,7 @@
             </div>
             </div>
             <div class="col-lg-5">
-              <h5>ANNECY</h5>
+              <h1>ANNECY</h1>
             <div class="heading">
                 <br>
                 <p> Annecy is a luxurious and sophisticated apartment with a stunning view of the Metropolitan Cathedral of St. Nicholas, which was founded in 1892. Its elegant and minimalist decoration, combined with the quality of its services, provide an incomparable feeling of comfort and privacy. It is located in the heart of the city, just 2 steps away from the central market and dining and nightlife areas.<br><br> </p>
