--- a/en/index.html
+++ b/en/index.html
@@ -90,7 +90,7 @@
         <div class="row align-items-center">
             <div class="col-lg-7">
             <div class="img">
-                <img src="../images/livingroom2.jpg" alt="" class="image1">
+                <img src="../images/livingroom2.jpg" alt="Annecy Apartment" class="image1">
             </div>
             </div>
             <div class="col-lg-5">
@@ -133,7 +133,7 @@
           </div>  
         <div class="col-lg-7">
           <div class="img">
-              <img src="../images/livingroom4.jpg" alt="" class="image1">
+              <img src="../images/livingroom4.jpg" alt="Annecy Apartment" class="image1">
           </div>
           </div>
           
@@ -146,7 +146,7 @@
     <div class="row align-items-center">
         <div class="col-lg-7">
         <div class="img">
-            <img src="../images/kitchen6.jpg" alt="" class="image1">
+            <img src="../images/kitchen6.jpg" alt="Annecy Apartment" class="image1">
         </div>
         </div>
         <div class="col-lg-5">
