--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="row">
         <div class="col-md-12" style="background-image: url('images/livingroom1.jpg'); background-size: cover; background-position: center; height: 90vh;">
             <div class="d-flex flex-column justify-content-center align-items-center h-100">
-            <h1 class="text-light lead" style="font-size: 0px;">Annecy Apartment. Κάντε κράτηση τώρα!</h1>
+            <h1 class="text-light lead"></h1>
             </div>
         </div>
         </div>
