--- a/en/index.html
+++ b/en/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Annecy Alexandroupoli</title>
-  <meta name="description" content="Enjoy a luxurious stay in the heart of Alexandroupoli at the Annecy Apartment. Book now!">
+  <meta name="description" content="Enjoy a luxurious stay in the heart of Alexandroupoli at the Annecy Apartment. Our elegant and minimalist two-bedroom apartment offers a stunning view of the Metropolitan Cathedral of St. Nicholas and quality services for a comfortable and private stay. Book now to experience our fully equipped apartment with free Wi-Fi, air conditioning, speakers, and more. Nearby attractions include the Lighthouse of Alexandroupolis, the Church of Saint Nicholas, and the Ecclesiastical Museum of Alexandroupolis. Contact us to arrange for cleaning services and a baby crib.">
   <meta name="keywords" content="Annecy Alexandroupoli, luxurious apartment, private stay, central location, nearby attractions, fully equipped, free Wi-Fi, air conditioning, speakers, cleaning services, baby crib, Metropolitan Cathedral of St. Nicholas, Lighthouse of Alexandroupolis, Church of Saint Nicholas, Ecclesiastical Museum of Alexandroupolis">
   <meta name="author" content="Annecy">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,14 +20,11 @@
       padding-left:10%;
       padding-right:10%;
     }
-    h1 {
-      font-size: 24px;
-    }
   </style>
 </head>
 
 <body>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light" style="font-weight:5  00;">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight:5  00;">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Annecy</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -79,7 +76,7 @@
         <div class="row">
         <div class="col-md-12" style="background-image: url('../images/livingroom1.jpg'); background-size: cover; background-position: center; height: 90vh;">
             <div class="d-flex flex-column justify-content-center align-items-center h-100">
-            <h1 class="text-light lead"></h1>
+            <p class="text-light lead"></p>
             </div>
         </div>
         </div>
@@ -90,11 +87,11 @@
         <div class="row align-items-center">
             <div class="col-lg-7">
             <div class="img">
-                <img src="../images/livingroom2.jpg" alt="Annecy Apartment" class="image1">
+                <img src="../images/livingroom2.jpg" alt="" class="image1">
             </div>
             </div>
             <div class="col-lg-5">
-              <h1>ANNECY</h1>
+              <h5>ANNECY</h5>
             <div class="heading">
                 <br>
                 <p> Annecy is a luxurious and sophisticated apartment with a stunning view of the Metropolitan Cathedral of St. Nicholas, which was founded in 1892. Its elegant and minimalist decoration, combined with the quality of its services, provide an incomparable feeling of comfort and privacy. It is located in the heart of the city, just 2 steps away from the central market and dining and nightlife areas.<br><br> </p>
@@ -108,34 +105,157 @@
     <section class="about top" id="about">
       <div class="container">
       <div class="row align-items-center">
-        <div class="col-lg-5">
-          <div class="heading">
-              <h5 style="font-weight: bold;">Interior</h5>
-              <p> The air-conditioned apartment consists of 2 bedrooms, a living room, a fully equipped kitchen with a microwave and coffee maker, and 1 bathroom. Smoking, pets, and parties are not allowed. </p>
-              <ul style="font-weight: bold;">
-                <li>Free Wi-Fi</li>
-                <li>
-                  Fully equipped</li>
-                <li>Heating - Air Conditioning</li>
-                <li>Speakers connected in all rooms</li>
-                <li>Cleaning service available upon arrangement</li>
-                <li>Baby crib provided upon arrangement</li>
-              </ul>
-              <ul class="room-links">
-                <li><a href="living-room.html">Living Room</a></li>
-                <li><a href="kitchen.html">Kitchen</a></li>
-                <li><a href="bathroom.html">Bathroom</a></li>
-                <li><a href="bedroom.html">Bedrooms</a></li>
-                <li></li>
-                <li></li>
-              </ul>
+        <div id="myCarousel1" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="row">
+                <div class="col-md-6 order-md-2">
+                  <img src="../images/livingroom4.jpg" alt="Right Image" class="d-block w-100">
+                </div>
+                <div class="col-md-6 order-md-1">
+                  <h2 style="margin-top:2%;">Interior</h2>
+                  <p style="text-align:justify; margin-top:5%;" >The air-conditioned apartment consists of 2 bedrooms, a living room, a fully equipped kitchen with a microwave and coffee maker, and 1 bathroom. Smoking, pets, and parties are not allowed.</p>
+                  <ul style="font-weight:bold; text-align: left; margin-top: 5%;">
+                    <li>Free Wi-Fi</li>
+                    <li>Fully equipped</li>
+                    <li>Heating - Air Conditioning</li>
+                    <li>Speakers connected in all rooms</li>
+                    <li>Cleaning service available upon arrangement</li>
+                    <li>Baby crib provided upon arrangement</li>
+                  </ul>
+                  </div>
+              </div>
             </div>
-          </div>  
-        <div class="col-lg-7">
-          <div class="img">
-              <img src="../images/livingroom4.jpg" alt="Annecy Apartment" class="image1">
+            <div class="carousel-item">
+              <div class="row">
+                <div class="col-md-6 order-md-2">
+                  <img src="../images/livingroom1.jpg" alt="Right Image" class="d-block w-100">
+                </div>
+                <div class="col-md-6 order-md-1">
+                  <h2 style="margin-top:2%;">Living Room</h2>
+                  <p style="text-align:justify; margin-top:5%;" >The living room of the Annecy Apartment features a minimalist elegance that, combined with the impressive and modern velvet sofa,
+                    makes for an ideal relaxation spot. In the center of the living room, there is a futuristic fireplace that adds a contemporary touch and creates a warm atmosphere.</p>
+                  <ul style="font-weight:bold; text-align: left; margin-top: 5%;">
+                    <li data-aos="fade-up" data-aos-delay="100">
+                      Futuristic Fireplace
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="200">
+                      Aquarium
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="300">
+                      TV - Netflix
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="400">
+                      Concealed Lighting
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="500">
+                      Speakers connected in all rooms
+                    </li>
+                  </ul>
+                  </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row">
+                <div class="col-md-6 order-md-2">
+                  <img src="../images/kitchen2.jpg" alt="Right Image" class="d-block w-100">
+                </div>
+                <div class="col-md-6 order-md-1">
+                  <h2 style="margin-top:2%;">Kitchen</h2>
+                  <p style="text-align:justify; margin-top:5%;" >The handmade kitchen furniture of Annecy apartment and their unique design are tailored to meet the needs and demands of its guests, offering the best possible service. The unparalleled aesthetics of the space and the well-equipped kitchen give you the opportunity to create homemade culinary delights, ensuring the best possible taste.</p>
+                  <ul style="font-weight:bold; text-align: left; margin-top: 5%;">
+                    <li data-aos="fade-up" data-aos-delay="100">
+                      4 Hot Plates
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="200">
+                      Fridge-Freezer
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="300">
+                      Microwave
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="400">
+                      Household equipment (toaster, etc.)
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="500">
+                      Coffee maker (espresso, cappuccino, chocolate, etc.)
+                    </li>
+                  </ul>
+                  </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row">
+                <div class="col-md-6 order-md-2">
+                  <img src="../images/bathroom1.jpg" alt="Right Image" class="d-block w-100">
+                </div>
+                <div class="col-md-6 order-md-1">
+                  <h2 style="margin-top:2%;">Bathroom</h2>
+                  <p style="text-align:justify; margin-top:5%;" >The uniquely special and ultra-chic bathroom of the Annecy apartment focuses on small details that pleasantly surprise the visitor with bio-cotton products that offer a delicate touch of luxury and relaxation.</p>
+                  <ul style="font-weight:bold; text-align: left; margin-top: 5%;">
+                    <li data-aos="fade-up" data-aos-delay="100">
+                      Stereo Speaker
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="200">
+                      Shower
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="300">
+                      Hair Dryer
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="400">
+                      Washing Machine 
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="500">
+                      Mirror 
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="600">
+                      Hidden Lighting
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="700">
+                      Personal Hygiene Items
+                    </li>
+                  </ul>
+                  </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row">
+                <div class="col-md-6 order-md-2">
+                  <img src="../images/bedroom2.jpg" alt="Right Image" class="d-block w-100">
+                </div>
+                <div class="col-md-6 order-md-1">
+                  <h2 style="margin-top:2%;">Bedrooms</h2>
+                  <p style="text-align:justify; margin-top:5%;" >The bedrooms of Annecy apartment blend elegance with style. Pastel colors and warm wood create a simple environment of comfort and sophistication. The high-quality Media Strom mattresses, with pillows of different heights, cater to the guests' needs in the best possible way, providing a pleasant and restful sleep.</p>
+                  <ul style="font-weight:bold; text-align: left; margin-top: 5%;">
+                    <li data-aos="fade-up" data-aos-delay="100">
+                      TV- Netflix 
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="200">
+                      Air conditioning 
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="300">
+                      Cloth Hanger
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="400">
+                      Media Strom mattresses
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="500">
+                      Relax high/medium pillows
+                    </li>
+                  </ul>
+                  </div>
+              </div>
+            </div>
           </div>
-          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel1" data-bs-slide="prev" style="padding-right:180px;">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#myCarousel1" data-bs-slide="next" style="padding-left:180px;">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+        
           
       </div>
       </div>
@@ -146,7 +266,7 @@
     <div class="row align-items-center">
         <div class="col-lg-7">
         <div class="img">
-            <img src="../images/kitchen6.jpg" alt="Annecy Apartment" class="image1">
+            <img src="../images/kitchen6.jpg" alt="" class="image1">
         </div>
         </div>
         <div class="col-lg-5">
